<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SMVDU Club App</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_in_with_your_university_ids">Sign In with your University Ids</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_sign_in">Login / Sign In</string>
    <string name="smvdu_clubs">SMVDU CLUBS</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="login_here">Login Here !</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="enter_email_here">enter email here</string>
    <string name="password_here" tools:ignore="TypographyEllipsis">password here...</string>
    <string name="set_a_string_password">set a string password</string>
    <string name="enter_tour_name" tools:ignore="TypographyEllipsis">enter your name...</string>
    <string name="sign_up">SIGN UP</string>
    <string name="use_your_university_ids">Use your University Ids</string>
    <string name="client_id" tools:ignore="TypographyDashes">251233991079-0j7um5e015lk7pjiqrpjlod8pebr2h7i.apps.googleusercontent.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="textview">TextView</string>
    <string name="dashboard_here">DASHBOARD HERE !</string>
    <string name="enter_password">enter password</string>
    <string name="re_enter_password">re-enter password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="logout">LogOut</string>
    <string name="clubs">Clubs</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="dashboard">Dashboard</string>
    <string name="clubs_directory">Clubs</string>
    <string name="clubname_here">clubname here</string>
</resources>