<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#373737"
        android:fontFamily="@font/poppins"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvClubs"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/directory_shape"
        android:gravity="center"
        android:text="@string/clubs"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:fontFamily="@font/poppins"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEvents"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/directory_shape"
        android:gravity="center"
        android:text="@string/events"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/poppins"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvClubs"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvClubs"
        app:layout_constraintTop_toBottomOf="@+id/tvClubs" />

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/directory_shape"
        android:gravity="center"
        android:text="@string/notifications"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/poppins"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvEvents"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvEvents"
        app:layout_constraintTop_toBottomOf="@+id/tvEvents" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/directory_shape"
        android:gravity="center"
        android:text="@string/about"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:fontFamily="@font/poppins"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvNotification"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNotification"
        app:layout_constraintTop_toBottomOf="@+id/tvNotification" />

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:background="@drawable/upper_shape"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="20dp"
        android:text="@string/dashboard"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvClubs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>